<?xml version="1.0"?>
<?xml-model href=""?>
<package format="3">
  <name>pose_to_inspect_interfaces</name>
  <version>1.0.0</version>
  <description>Pose to Inspect Interfaces</description>
  <maintainer email="andres.galeote@itcl.es">Andres Galeote</maintainer>
  <license>Apache License, Version 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
